statics/css/index.css
.header-bar {
    width: 100%;
    height: 60px;
    background-color: #f1f1f1;
    display:block;
    overflow: hidden;
}
.header-left {
    float:left;
    height:100%;
    width:200px;
    overflow: hidden;
    padding: 10px 30px;
    box-sizing: border-box;
}
.logo {
    font-size: 20px;
}
.logo-desc {
    color: rgba(178, 178, 178, 0.93);
    padding: 5px 5px;
}
.translate-app {
    width: 100%;
}
.translate-title {
    width:100%;
    height:60px;
    border-bottom: 1px solid #eee;

}
.translate-desc-left {
    vertical-align: middle;
    width: 200px;
    height: 100%;
    line-height: 60px;
    font-size: 20px;
    padding: 0px 30px;
    color: #dd4b39;
    float:left;
    box-sizing: border-box;
}
.translate-desc-right {
    height: 100%;
    line-height: 60px;
    font-size: 16px;
    padding: 0px 30px;
    color: #757575!important;
    float:right;
    box-sizing: border-box;
}
.translate-area {
    width:100%;
    height: 300px;
    padding: 0px 30px;
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
}
.translate-area-left {
    height: 100%;
    flex:1;
    margin-right:10px;
}
.translate-area-right {
    height: 100%;
    flex:1;
}
.language-choose {
    height: 50px;
    width: 100%;
    padding:10px 0px;
    box-sizing: border-box;
}
.language-select {
    height:30px;
    line-height:30px;
    max-width: 70px;
    width:70px;
    text-align: center;
    border: 1px solid #ccc;
    font-size: 12px;
    color: #333;
    background-color: #eee;
    background-image: -webkit-linear-gradient(top,#eee,#e0e0e0);
    display:inline-block;
}
.input-box {
    width:100%;
    overflow-x: auto;
    overflow-y: hidden;
    height:150px;
    font-size:24px;
    padding:8px 8px 32px;
    resize:none;
    box-sizing: border-box;
}
.box-output {
    background-color: #f1f1f1;
    border: 0px solid;
}
.translate-bottom {
    height:30px;
    line-height:30px;
    -webkit-appearance:none;
    box-sizing: content-box;
    box-shadow: none;
    border:1px solid #3079ed;
    width:50px;
    max-width: 50px;
    text-align: center;
    font-size: 14px;
    color: white;
    background-color: #4d90fe;
    background-image: -webkit-linear-gradient(top,#4d90fe,#4787ed);
    display:inline-block;
}

